--- a/frontend/src/styles/global.scss
+++ b/frontend/src/styles/global.scss
@@ -20,4 +20,18 @@
         padding-left: 1rem;
         border-left: 3px solid rgba(0, 0, 0, 0.1);
     }
+
+    img {
+        max-width: 100%; 
+        height: auto;
+    }
+
+    pre {
+        background: #0D0D0D;
+        color: #FFF;
+        font-family: 'JetBrains Mono', monospace;
+        padding: 0.75rem 1rem;
+        border-radius: 0.5rem;
+        overflow-x: auto;
+    }
 }
